kubernetes/cnil-pia-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnil-dpia-deployment
  labels:
    app: cnil-dpia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnil-dpia
  template:
    metadata:
      labels:
        app: cnil-dpia
    spec:
      containers:
      - name: cnil-dpia-db
        image: postgres:10.3
        imagePullPolicy: Always
        volumeMounts:
          - name: db-data
            mountPath: /app/volume
        ports:
        - containerPort: 5432
          protocol: TCP
      - name: cnil-dpia-front
        image: docker.example.com/production/cnil-pia-front
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      - name: cnil-dpia-back
        image: docker.example.com/production/cnil-pia-back
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
      imagePullSecrets:
              - name: docker-example.com
      volumes:
      - name: db-data
        hostPath:
          path: /srv/production/cnil-dpia-db-data
---
apiVersion: v1
kind: Service
metadata:
    labels:
      app: cnil-dpia-front
    name: cnil-dpia-front
spec:
    ports:
      - port: 80
        name: cnil-dpia-front
        targetPort: 80
    selector:
      app: cnil-dpia
---
apiVersion: v1
kind: Service
metadata:
    labels:
      app: cnil-dpia-db
    name: cnil-dpia-db
spec:
    ports:
      - port: 5432
        name: cnil-dpia-db
        targetPort: 5432
    selector:
      app: cnil-dpia
---
apiVersion: v1
kind: Service
metadata:
    labels:
      app: cnil-dpia-back
    name: cnil-dpia-back
spec:
    ports:
      - port: 3000
        name: cnil-dpia-back
        targetPort: 3000
    selector:
      app: cnil-dpia
---
apiVersion: v1
kind: Service
metadata:
    labels:
      app: cnil-dpia-front
    name: cnil-dpia-front
spec:
    ports:
      - port: 80
        name: cnil-dpia-front
        targetPort: 80
    selector:
      app: cnil-dpia
